--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,15 @@ canvas {
     top: 0;
     left: 0;
 }
+video {
+    object-fit: cover;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
 
 :root {
     --dark-bg: rgba(15, 15, 15, 0.95);
@@ -13,16 +22,23 @@ canvas {
     font-style: normal;
    
 }
+.error {
+    color: red;
+    size: 80%;
+}
 
+.hidden {
+    display: none;
+}
 
 #cv-form {
     color: white !important
 }
 
 
-.bg {
+/* .bg {
     background-image: url('./img/image1.png');
-}
+} */
 
 .threejs {
     /* display: none; */
