--- a/style.css
+++ b/style.css
@@ -19,3 +19,12 @@
 .background {
     background-color: aqua;
 }
+
+.error {
+    color: red;
+    size: 80%;
+}
+
+.hidden {
+    display: none;
+}
